--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="hero__group">
                     <h1 class="hero__text">Доставляйте заказы <br /> из ресторанов, кафе и магазинов,
                         когда Вам удобно и как удобно</h1>
-                    <button class="hero__btn">Стать курьером</button>
+                    <button class="hero__btn"><a href="#main-form">Стать курьером</a></button>
                 </div>
             </section>
         </div>
