small changes in FAQ

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                     <div class="form__container form__container-mob">
                         <p class="form__container-title form__container-title-mob form__container-title_padding">Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
-                            <a class="footer-phone__group-img-link" href="#"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png"
+                            <a class="footer-phone__group-img-link" href="https://wa.me/79522212844"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png"
                                     alt="icon"></a>
-                            <a class="footer-phone__group-img-link" href="#"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png"
+                            <a class="footer-phone__group-img-link" href="https://t.me/+79522212844"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png"
                                     alt="icon"></a>
                             <a class="footer-phone__group-text phone__group-modal" href="tel:+79522212844">+7 (952)
                                 221-28-44</a>
@@ -191,10 +191,7 @@
                                     или
                                     использовать транспортное средство, в том числе личный автомобиль. Если вы хорошо
                                     управляетесь с велосипедом, самокатом, роликами и другими средствами передвижения —
-                                    используйте их.
-
-
-                                    Мы также предоставляем помощь в аренде авто и других транспортных средств.
+                                    используйте их.<br /><br /><span style="font-weight: 600;">Мы также предоставляем помощь в аренде авто и других транспортных средств.</span>
                                 </div>
                             </div>
                         </div>
@@ -214,15 +211,12 @@
                                 Какие документы необходимо представить, чтобы устроиться курьером?
                             </div>
                             <div class="faq__content">
-                                <div class="faq__answer">Гражданам РФ: паспорт с пропиской.
-
-                                    Гражданам Киргизии, Казахстана, Белоруссии, Армении: паспорт, регистрация,
+                                <div class="faq__answer"><span style="font-weight: 600;">Гражданам РФ:</span> паспорт с пропиской.<br /><br />
+                                    <span style="font-weight: 600;">Гражданам Киргизии, Казахстана, Белоруссии, Армении:</span> паспорт, регистрация,
                                     медицинская
                                     книжка, миграционная карта с целью въезда «Работа» (кроме граждан Белоруссии),
                                     СНИЛС,
-                                    ИНН, ДМС (медицинская страховка).
-
-                                    Другое гражданство: паспорт, регистрация, медицинская книжка, миграционная карта с
+                                    ИНН, ДМС (медицинская страховка).<br /><br /><span style="font-weight: 600;">Другое гражданство:</span> паспорт, регистрация, медицинская книжка, миграционная карта с
                                     целью
                                     въезда «Работа», СНИЛС, ИНН, ДМС (медицинская страховка). А также ВНЖ, патент с
                                     чеками
@@ -246,11 +240,11 @@
                                 Какой фиксированный доход?
                             </div>
                             <div class="faq__content">
-                                <div class="faq__answer">52000 рублей при среднем количестве: 12 дней и 300 заказов.
+                                <div class="faq__answer">52000 рублей при среднем количестве: 12 дней и 300 заказов.<br />
 
-                                    64000 рублей при среднем количестве: 16 дней и 400 заказов.
+                                    64000 рублей при среднем количестве: 16 дней и 400 заказов.<br />
 
-                                    80000 рублей при среднем количестве: 20 дней и 500 заказов.
+                                    80000 рублей при среднем количестве: 20 дней и 500 заказов.<br />
 
                                     102000 рублей при среднем количестве: 24 дней и 600 заказов.
                                 </div>
