added radio inputs

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Яндекс Работа</title>
     <meta name="og:title" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
-  <meta name="og:type" content="article">
-  <meta name="og:url" content="https://website.ru">
-  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
-  <meta property="og:title" content="Работа курьером в сервисе доставок от Яндекс и Delivery Club">
-  <meta property="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
-  <meta name="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
-  <meta name="keywords"
-    content="Яндрекс, Деливери, Delivery Club, работа курьером, курьер, пеший курьер, доставка, еды, еда" />
+    <meta name="og:type" content="article">
+    <meta name="og:url" content="https://website.ru">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta property="og:title" content="Работа курьером в сервисе доставок от Яндекс и Delivery Club">
+    <meta property="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
+    <meta name="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
+    <meta name="keywords"
+        content="Яндрекс, Деливери, Delivery Club, работа курьером, курьер, пеший курьер, доставка, еды, еда" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
@@ -29,7 +29,7 @@
     <meta name="theme-color" content="#ffffff">
 </head>
 
-<body>
+<body ontouchstart="">
     <header class="header">
         <div class="header__logo">
             <p class="header__logo-text">Работа курьером в Яндекс</p>
@@ -48,11 +48,14 @@
                 <div id="modal_menu" class="form-group modal_menu__container">
                     <div id="close">&times;</div>
                     <div class="form__container form__container-mob">
-                        <p class="form__container-title form__container-title-mob form__container-title_padding">Позвоните нам</p>
+                        <p class="form__container-title form__container-title-mob form__container-title_padding">
+                            Позвоните нам</p>
                         <div class="footer-phone__group modal-group">
-                            <a class="footer-phone__group-img-link" href="https://wa.me/79522212844"><img class="footer-phone__group-img" src="./images/watsapp-icon-black.png"
+                            <a class="footer-phone__group-img-link" href="https://wa.me/79522212844"><img
+                                    class="footer-phone__group-img" src="./images/watsapp-icon-black.png"
                                     alt="icon"></a>
-                            <a class="footer-phone__group-img-link" href="https://t.me/+79522212844"><img class="footer-phone__group-img" src="./images/telegram-icon-black 1.png"
+                            <a class="footer-phone__group-img-link" href="https://t.me/+79522212844"><img
+                                    class="footer-phone__group-img" src="./images/telegram-icon-black 1.png"
                                     alt="icon"></a>
                             <a class="footer-phone__group-text phone__group-modal" href="tel:+79522212844">+7 (952)
                                 221-28-44</a>
@@ -60,7 +63,8 @@
                         <p class="form__container-title form__container-title-mob">или закажите звонок</p>
                         <form action="" id="modal-form">
                             <input id="modal-form_name" class="form__text" type="text" placeholder="ФИО" required>
-                            <input id="modal-form_phone" class="form__text" type="number" placeholder="Телефон" required>
+                            <input id="modal-form_phone" class="form__text" type="number" placeholder="Телефон"
+                                required>
                             <button class="form-btn">Отправить</button>
                         </form>
                     </div>
@@ -191,7 +195,8 @@
                                     или
                                     использовать транспортное средство, в том числе личный автомобиль. Если вы хорошо
                                     управляетесь с велосипедом, самокатом, роликами и другими средствами передвижения —
-                                    используйте их.<br /><br /><span style="font-weight: 600;">Мы также предоставляем помощь в аренде авто и других транспортных средств.</span>
+                                    используйте их.<br /><br /><span style="font-weight: 600;">Мы также предоставляем
+                                        помощь в аренде авто и других транспортных средств.</span>
                                 </div>
                             </div>
                         </div>
@@ -211,12 +216,16 @@
                                 Какие документы необходимо представить, чтобы устроиться курьером?
                             </div>
                             <div class="faq__content">
-                                <div class="faq__answer"><span style="font-weight: 600;">Гражданам РФ:</span> паспорт с пропиской.<br /><br />
-                                    <span style="font-weight: 600;">Гражданам Киргизии, Казахстана, Белоруссии, Армении:</span> паспорт, регистрация,
+                                <div class="faq__answer"><span style="font-weight: 600;">Гражданам РФ:</span> паспорт с
+                                    пропиской.<br /><br />
+                                    <span style="font-weight: 600;">Гражданам Киргизии, Казахстана, Белоруссии,
+                                        Армении:</span> паспорт, регистрация,
                                     медицинская
                                     книжка, миграционная карта с целью въезда «Работа» (кроме граждан Белоруссии),
                                     СНИЛС,
-                                    ИНН, ДМС (медицинская страховка).<br /><br /><span style="font-weight: 600;">Другое гражданство:</span> паспорт, регистрация, медицинская книжка, миграционная карта с
+                                    ИНН, ДМС (медицинская страховка).<br /><br /><span style="font-weight: 600;">Другое
+                                        гражданство:</span> паспорт, регистрация, медицинская книжка, миграционная карта
+                                    с
                                     целью
                                     въезда «Работа», СНИЛС, ИНН, ДМС (медицинская страховка). А также ВНЖ, патент с
                                     чеками
@@ -240,7 +249,8 @@
                                 Какой фиксированный доход?
                             </div>
                             <div class="faq__content">
-                                <div class="faq__answer">52000 рублей при среднем количестве: 12 дней и 300 заказов.<br />
+                                <div class="faq__answer">52000 рублей при среднем количестве: 12 дней и 300
+                                    заказов.<br />
 
                                     64000 рублей при среднем количестве: 16 дней и 400 заказов.<br />
 
@@ -260,8 +270,22 @@
                     <p class="form__container-title">Оставить заявку</p>
                     <form action="">
                         <input id="main-form_name" class="form__text" type="text" placeholder="ФИО" required>
-                        <input id="main-form_date" class="form__text" type="text" placeholder="Дата рождения" onfocus="(this.type = 'date')" onblur="(this.type = 'text')" required>
-                        <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон"  required>
+                        <input id="main-form_date" class="form__text" type="text" placeholder="Дата рождения"
+                            onfocus="(this.type = 'date')" onblur="(this.type = 'text')" required>
+                        <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон" required>
+                        <div class="radio-inputs-wrapper">
+                            <p class="faq__header">Хoчу работать:</p>
+                            <div class="radio-inputs">
+                                <div class="input-item">
+                                    <input type="radio">
+                                    <label>на авто, мотоцикле или скутере</label>
+                                </div>
+                                <div class="input-item">
+                                    <input type="radio">
+                                    <label>на велосипеде, электровелосипеде, самокате или пешком</label>
+                                </div>
+                            </div>
+                        </div>
                         <button class="form-btn">Отправить</button>
                     </form>
                 </div>
@@ -280,8 +304,10 @@
                 <p class="footer-text">Официальный партнер Яндекс</p>
             </div>
             <div class="footer-phone__group">
-                <a class="footer-phone__group-img-link" href="https://wa.me/79522212844"><img class="footer-phone__group-img" src="./images/watsapp-white-icon.png" alt="icon"></a>
-                <a class="footer-phone__group-img-link" href="https://t.me/+79522212844"><img class="footer-phone__group-img" src="./images/telegram-white-icon.png" alt="icon"></a>
+                <a class="footer-phone__group-img-link" href="https://wa.me/79522212844"><img
+                        class="footer-phone__group-img" src="./images/watsapp-white-icon.png" alt="icon"></a>
+                <a class="footer-phone__group-img-link" href="https://t.me/+79522212844"><img
+                        class="footer-phone__group-img" src="./images/telegram-white-icon.png" alt="icon"></a>
                 <a class="footer-phone__group-text" href="tel:+79522212844">+7 (952) 221-28-44</a>
             </div>
         </footer>
