added text input mask for date

--- a/index.html
+++ b/index.html
@@ -270,8 +270,7 @@
                     <p class="form__container-title">Оставить заявку</p>
                     <form action="">
                         <input id="main-form_name" class="form__text" type="text" placeholder="ФИО" required>
-                        <input id="main-form_date" class="form__text" type="text" placeholder="Дата рождения"
-                            onfocus="(this.type = 'date')" onblur="(this.type = 'text')" required>
+                        <input id="main-form_date" class="form__text" type="text" placeholder="Дата рождения" maxlength="10" required>
                         <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон" required>
                         <div class="radio-inputs-wrapper">
                             <p class="faq__header">Хoчу работать:</p>
