--- a/index.html
+++ b/index.html
@@ -274,16 +274,16 @@
                         <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон" required>
                         <div class="radio-inputs-wrapper">
                             <p class="faq__header">Хoчу работать:</p>
-                            <div class="radio-inputs">
+                            <fieldset class="radio-inputs">
                                 <div class="input-item">
-                                    <input type="radio">
+                                    <input id="main-form_radio-auto" type="radio" value="авто" name="тип">
                                     <label>на авто, мотоцикле или скутере</label>
                                 </div>
                                 <div class="input-item">
-                                    <input type="radio">
+                                    <input id="main-form_radio-walk" type="radio" value="пеший" name="тип">
                                     <label>на велосипеде, электровелосипеде, самокате или пешком</label>
                                 </div>
-                            </div>
+                            </fieldset>
                         </div>
                         <button class="form-btn">Отправить</button>
                     </form>
