--- a/index.html
+++ b/index.html
@@ -276,11 +276,11 @@
                             <p class="faq__header">Хoчу работать:</p>
                             <fieldset class="radio-inputs">
                                 <div class="input-item">
-                                    <input id="main-form_radio-auto" type="radio" value="авто" name="тип">
+                                    <input id="main-form_radio" type="radio" value="авто" name="type" checked>
                                     <label>на авто, мотоцикле или скутере</label>
                                 </div>
                                 <div class="input-item">
-                                    <input id="main-form_radio-walk" type="radio" value="пеший" name="тип">
+                                    <input id="main-form_radio" type="radio" value="пеший" name="type">
                                     <label>на велосипеде, электровелосипеде, самокате или пешком</label>
                                 </div>
                             </fieldset>
