--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p class="form__container-title form__container-title-mob">или закажите звонок</p>
                         <form action="" id="modal-form">
                             <input id="modal-form_name" class="form__text" type="text" placeholder="ФИО" required>
-                            <input id="modal-form_phone" class="form__text" type="number" placeholder="Телефон"
+                            <input id="modal-form_phone" class="form__text" type="number" placeholder="Телефон" maxlength="12"
                                 required>
                             <button class="form-btn">Отправить</button>
                         </form>
@@ -271,7 +271,7 @@
                     <form action="">
                         <input id="main-form_name" class="form__text" type="text" placeholder="ФИО" required>
                         <input id="main-form_date" class="form__text" type="text" placeholder="Дата рождения" maxlength="10" required>
-                        <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон" required>
+                        <input id="main-form_phone" class="form__text" type="number" placeholder="Телефон" maxlength="12" required>
                         <div class="radio-inputs-wrapper">
                             <p class="faq__header">Хoчу работать:</p>
                             <fieldset class="radio-inputs">
