--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
         <section class="description">
             <div class="description__container">
-                <img class="description-img" src="./images/description-img.png" alt="Яндекс курьер">
+                <img class="description-img" src="./images/description-img.webp" alt="Яндекс курьер">
                 <p class="description__container-text">Работа курьером сервисах по доставке еды от Яндекс и Delivery
                     Club доступна
                     каждому. Для этого
