--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <button class="form-btn">Отправить</button>
                         </form>
                     </div>
-                    <img class="form__img modal_menu-form__img" src="./images/phone.png" alt="deli-logo">
+                    <img class="form__img modal_menu-form__img" src="./images/phone2.png" alt="deli-logo">
                 </div>
             </div>
         </div>
@@ -288,7 +288,7 @@
                         <button class="form-btn">Отправить</button>
                     </form>
                 </div>
-                <img class="form__img" src="./images/phone.png" alt="deli-logo">
+                <img class="form__img" src="./images/phone2.png" alt="deli-logo">
             </div>
         </section>
     </main>
