--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Яндекс Работа</title>
+    <title>Работа курьером в сервисе доставки Яндекс и Delivery Club</title>
     <meta name="og:title" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
     <meta name="og:type" content="article">
-    <meta name="og:url" content="https://website.ru">
+    <meta name="og:url" content="https://ya-eda-work.ru">
+    <meta name="og:image" content="favicon\favicon-32x32.png">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:title" content="Работа курьером в сервисе доставок от Яндекс и Delivery Club">
     <meta property="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
     <meta name="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
     <meta name="keywords"
-        content="Яндрекс, Деливери, Delivery Club, работа курьером, курьер, пеший курьер, доставка, еды, еда" />
+        content="Яндрекс, Деливери, Delivery Club, работа, курьером, курьер, пеший, курьер, доставка, еды, еда, авто, автокурьер, мото, мотокурьер" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
