--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Работа курьером в сервисе доставки Яндекс и Delivery Club</title>
     <meta name="og:title" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
     <meta name="og:type" content="article">
+    <meta property="og:locale" content="ru_RU">
     <meta name="og:url" content="https://ya-eda-work.ru">
     <meta name="og:image" content="favicon\favicon-32x32.png">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
