--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="og:type" content="article">
     <meta property="og:locale" content="ru_RU">
     <meta name="og:url" content="https://ya-eda-work.ru">
-    <meta name="og:image" content="https://ya-eda-work.ru/favicon/favicon-32x32.png">
+    <meta name="og:image" content="https://ya-eda-work.ru/images/og-img.png">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta property="og:title" content="Работа курьером в сервисе доставок от Яндекс и Delivery Club">
     <meta property="og:description" content="Работа курьером в сервисе доставки Яндекс и Delivery Club">
